# importance

./: .gitignore  README.md  app.py  best_offer.py  index.html  main.py  package-lock.json  package.json  prepped.csv  pyproject.toml  requirements.txt  run.sh  run_server.sh
data/training/: cuad.tsv
src/: App.css  App.jsx
src/negotiation/: __init__.py  cli.py
src/negotiation/data/: __init__.py  loaders.py  transforms.py
src/negotiation/extraction/: __init__.py  detectors.py  html_parser.py  llm_extractor.py  schemas.py
src/negotiation/models/: __init__.py  predictor.py
src/negotiation/utils/: __init__.py  text.py
tests/: __init__.py  test_predictor.py
