[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "negotiation"
version = "0.1.0"
description = "ML toolkit for contract negotiation and term prediction"
readme = "docs/process.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.9.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.18.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
negotiate = "negotiation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
